--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <simple.variable>This is a nice list of resources I used to learn about maven</simple.variable>
     </properties>
 
     <!-- external repository that contains dependencies from Atlassian company, that are not available
@@ -46,5 +47,15 @@
             <version>5.1.3</version>
         </dependency>
     </dependencies>
+
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
     
 </project>
