--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>com.testehan.maven</groupId>
     <artifactId>MavenExperiments</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>module1</module>
+        <module>module2</module>
+    </modules>
 
 
     <name>MavenExperiments</name>
@@ -39,23 +45,7 @@
         </repository>
     </repositories>
 
-    <dependencies>
-        <!-- just for demonstration purposes...I added a dependency from atlassian to see if the repository setttings work -->
-        <dependency>
-            <groupId>com.atlassian.mail</groupId>
-            <artifactId>atlassian-mail</artifactId>
-            <version>5.1.3</version>
-        </dependency>
-    </dependencies>
 
 
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-    </build>
     
 </project>
