--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>module1</module>
-        <module>module2</module>
+        <module>cleanPluginExamples</module>
+        <module>resourcesPluginExamples</module>
     </modules>
 
 
