noew modules for compiler and deploy plugin - deploy plugin to return to it after learning about JFROG

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <modules>
         <module>cleanPluginExamples</module>
         <module>resourcesPluginExamples</module>
+        <module>compilerPluginExamples</module>
+        <module>deployPluginExamples</module>
     </modules>
 
 
