added dependency scope example module

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>failsafePluginExamples</module>
         <module>sitePluginExamples</module>
         <module>checkstylePluginExamples</module>
+        <module>scopesExamples</module>
     </modules>
 
 
